--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@
   --color-212A3A:#212A3A;
   --color-F7F3EC:#F7F3EC;
   --color-F1F1F1:#F1F1F1;
+  --color-F4F4F4:#F4F4F4;
 
 }
     
@@ -138,22 +139,31 @@ ul {
 
 .main-header {
   background-color: var(--basic-background);
- 
-  margin-bottom: 120px;
+   
+  margin-bottom: 59px;
 
   outline: 5px solid blue;
   outline-offset: -5px;
 }
 .header-order-bar {
-  background-color: var(--color-293449);
+ background-color: var(--color-293449);
 }
 .header-order-wrapper {
+  
+  
   outline: 5px solid green;
   outline-offset: -5px;
-    
+
+  margin-bottom: 43px;
+
+  display: flex;
+  align-content: flex-start;
+
+  
+  /* grid
   display: grid;
   grid-template-columns: min-content min-content auto;
-  column-gap: 20px;
+  column-gap: 20px; */
 }
 .logo-wrapper {
   width: 220px;
@@ -173,13 +183,13 @@ ul {
   background-color: var(--error);
 }
 .search-wrapper {
-  width: 220px;
-  height: 42px;
-
   outline: 5px solid greenyellow;
   outline-offset: -5px;
 }
 .search{
+  width: 220px;
+  height: 42px;
+
   color: var(--basic-black);
   background-color: var(--color-293449);
   border: none;
@@ -206,10 +216,22 @@ ul {
   width: 460px;
   outline: 5px solid greenyellow;
   outline-offset: -5px;
+
+  flex-grow: 1;
 }
 .order-section-list {
   margin: 0;
   padding: 0;
+
+  display: flex;
+  align-content: center;
+}
+.order-section-item {
+  outline: 5px solid brown;
+  outline-offset: -5px;
+}
+.order-section-item:first-child {
+  margin-right: auto;
 }
 .order-section-item a {
   color: var(--basic-white);
@@ -232,9 +254,13 @@ ul {
   outline: 5px solid yellow;
   outline-offset: -5px;
   
-  display: grid;
+  margin-bottom: 40px;
+  /* display: grid;
   grid-template-columns:repeat(3, 300px);
-  column-gap: 20px;
+  column-gap: 20px; */
+
+  display: flex;
+  justify-content: space-between;
 }
 .header-shop-description {
   font-style: italic;
@@ -242,6 +268,10 @@ ul {
   line-height: 23px;
   text-align: left;
   color: var(--basic-red);
+
+  width: 197px;
+  margin-left: 30px;
+  margin-right: 97px;
   
   outline: 5px solid yellowgreen;
   outline-offset: -5px;
@@ -249,6 +279,9 @@ ul {
 .header-phone-and-shop-addres-wrapper {
   outline: 5px solid yellowgreen;
   outline-offset: -5px;
+
+  width: 270px;
+  margin-right: 69px;
 
   text-align: center;
 }
@@ -266,10 +299,17 @@ ul {
 .unreg-user-section {
   outline: 5px solid yellowgreen;
   outline-offset: -5px;
+
+  width: 285px;
 }
 .unreg-user-section-list {
+ 
   margin: 0;
   padding: 0;
+
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 .unreg-user-section-list a{
   font-size: 21px;
@@ -286,7 +326,8 @@ ul {
 
 /* main-navigation */
 .main-navigation{
-background-color: var(--color-32425C);
+  margin-bottom: 60px;
+  background-color: var(--color-32425C);
 }
 .main-navigation-list {
   margin: 0;
@@ -295,7 +336,10 @@ background-color: var(--color-32425C);
   outline: 5px solid yellowgreen;
   outline-offset: -5px;
 
-  justify-self: center;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  align-content: flex-start;
 }
 .main-navigation a {
   color: var(--basic-white);  
@@ -401,39 +445,64 @@ background-color: var(--color-32425C);
   outline: 5px solid blue;
   outline-offset: -5px;
 
-  display: grid;
-  grid-template-columns: repeat(4,220px);
+  /* display: grid;
+  grid-template-columns: repeat(4,220px); */
+
+  display: flex;
+  justify-content: space-between;
+
+  background-color: var(--color-F9F5F0);
 }
 .popular-products-list-wrapper,
 .popular-manufacturers-list-wrapper {
    outline: 5px solid blue;
    outline-offset: -5px;
 
-   margin-bottom: 70px;
+   margin-bottom: 50px;
 }
-.popular-products-list-wrapper {
-  margin-right: 0, 0;
-}
- .popular-products-list {
-   display: grid;
+.popular-products-list {
+   /* display: grid;
    grid-template-columns: repeat(4,220px);
    grid-template-rows: 318px;
-   gap: 20px;
+   gap: 20px; */
 
-   margin: 0;
-   padding: 0;
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+
+  margin: 0;
+  padding: 0;
 }
-.popular-manufacturers-list { 
-  display: grid;
-   grid-template-columns: repeat(4,220px);
-   
-   gap: 20px;
+.popular-products-item {
+  width: 220px;
+  min-height: 318px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+.popular-products-item:nth-child(4) {
+  margin-right: 0px;
+}
 
-   margin: 0;
-   padding: 0;
+
+.popular-manufacturers-list { 
+  /* display: grid;
+  grid-template-columns: repeat(4,220px);
+  
+  gap: 20px; */
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+
+  margin: 0;
+  padding: 0;
+
+  margin-right: -20px;
 }
 .popular-manufacturers-item {
   height: 145px;
+  width: 220px;
+  margin-right: 20px;
+  margin-bottom: 20px;
 }
 .popular-products-item,
 .popular-manufacturers-item {
@@ -444,22 +513,24 @@ background-color: var(--color-32425C);
 .popular-manufacturers h2 {
   outline: 5px solid green;
   outline-offset: -5px;
+  max-width: 500px;
 
-  grid-column: 1/4;
-}
-.popular-products a {
-  grid-column: 4/5;
-}
-.popular-products-bar,
-.popular-manufacturers-bar {
-  background-color: var(--color-F9F5F0);
-}
-.popular-products h2,
-.popular-manufacturers h2 {
+  /* grid-column: 1/4; */
+
+  margin-top: 29px;
+  margin-left: 28px;
+  margin-bottom: 30px;
+  
   font-size: 30px;
   line-height: 30px;
   text-transform: uppercase;
   color: var(--color-32425C);
+}
+.popular-products a,
+.popular-manufacturers a {
+  /* grid-column: 4/5; */
+  max-width: 250px;
+  min-width: 192px;
 }
 .popular-products-text,
 .perforators-item-text {
@@ -467,19 +538,34 @@ background-color: var(--color-32425C);
   font-weight: 700;
   line-height: 20px;
   color: var(--basic-black);
+
+  text-align: center;
+
+  margin-bottom:7px;
 }
 .pass-through-text,
 .new-price {
+  display: block;
   font-family: "PT Sans", Arial, sans-serif;
   font-weight: 700;
   font-size: 17px;
   line-height: 18px;
   color: var(--color-A9A9A9);
+
+  text-align: center;
+}
+.pass-through-text {
+  margin-bottom: 13px;
+
+  text-align: center;
 }
 .new-price {
   text-decoration: none;
   color: var(--basic-white);
   background-color: var(--basic-red);
+
+  margin-left: 47px;
+  margin-bottom: 21px;
 }
 .popular-products-button.buy,
 .perforators-list-button.buy {
@@ -517,19 +603,23 @@ background-color: var(--color-32425C);
   outline-offset: -5px;
     
   margin-bottom: 70px;
+  display: flex;
+  flex-wrap: wrap;
   
-  display: grid;
-  grid-template-columns: repeat(4,235px);
+  /* display: grid;
+  grid-template-columns: repeat(4,235px); */
 }
 .services-info-wripper {
   outline: 5px solid green;
   outline-offset: -5px;
 
-  grid-column: 1/-1;
-  grid-row: 1/2;
+  /* grid-column: 1/-1;
+  grid-row: 1/2; */
 
   margin: 0;
   padding: 0; 
+
+  width: 940px;
 }
 .services h2,.services h3 {
   font-size: 30px; 
@@ -539,32 +629,60 @@ background-color: var(--color-32425C);
 
   margin: 0;
 }
+.services h2 {
+  margin-top: 64px;
+  margin-bottom: 25px;
+}
 .services h3  {
+  margin-bottom: 30px;
+
   color:var(--color-32425C);
 }
 .services p {
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 13px;
+
+  margin: 0;
+  margin-bottom: 67px;
+}
+.services-button-and-delivery-flex-wrapper {
+  width: 940px;
+
+  display: flex;
+
 }
 .services-button {
   outline: 5px solid green;
   outline-offset: -5px;
+  width: 240px;
 }
 .services-button-list {
   margin: 0;
   padding: 0;
+
+  display: flex;
+  flex-wrap: wrap;
 }
 .services-button-item button{
   font-size: 21px;
   font-weight: 700;
   line-height: 30px;
+
+  text-align: start;
+
+  width: 240px;
+  height: 61px;
+  padding-left: 22px;
+  padding-top: 14px;
+  padding-bottom: 17px;
+
   color: var(--basic-white);
-  background-color: var(--basic-black);
+  background-color: var(--color-32425C);
 }
 .services-button-item .current {
   font-size: 21px;
   line-height: 30px;
-  color: var(--basic-black); 
+  color: var(--color-32425C); 
   background-color: var(--basic-white);
 }
 .services-button-item button:hover,
@@ -579,8 +697,9 @@ background-color: var(--color-32425C);
   outline: 5px solid green;
   outline-offset: -5px;
 
-  grid-column: 2/-1;
-}
+  /* grid-column: 2/-1;*/
+  width: 700px;
+} 
 .services-delivery-wripper ul {
   margin: 0;
   padding: 0; 
@@ -593,9 +712,12 @@ background-color: var(--color-32425C);
     
   margin-bottom: 70px;
  
-  display: grid;
+  /* display: grid;
   grid-template-columns: repeat(12,60px);
-  column-gap: 20px;
+  column-gap: 20px; */
+
+  display: flex;
+  justify-content: space-between;
 }
 .about-us,
 .contacts {
@@ -603,15 +725,24 @@ background-color: var(--color-32425C);
   outline-offset: -5px;
 }
 .contacts {
-  grid-column: 9/-1;
+  /* grid-column: 9/-1; */
+  width: 300px;
 }
-.about-us{
-  grid-column: 1/7;
+.contacts img {
+  width: 300px;
+  height: 158px;
+  margin-bottom: 25px;
 }
-.about-us-list{
+.about-us {
+  /* grid-column: 1/7; */
+  width: 460px;
+}
+.about-us-list {
   margin: 0;
   padding: 0;
+  margin-bottom: 25px;
 }
+
 .about-us-company-name,
 .contacts-header {
   font-size: 30px;
@@ -619,11 +750,27 @@ background-color: var(--color-32425C);
   text-transform: uppercase;
   margin: 0;
 }
+.about-us-company-name {
+  margin-bottom: 40px;
+}
+.contacts-header {
+  margin-bottom: 24px;
+} 
 .about-us-info,
 .contacts-info {
   font-family: "PT Sans", Arial, sans-serif;
   font-weight: 400;
   font-size: 13px;
+  margin: 0;
+}
+.about-us-info.first-paragraph {
+  margin-bottom: 40px;
+}
+.about-us-info.second-paragraph {
+  margin-bottom: 14px;
+}
+.contacts-info.first-paragraph {
+  margin-bottom: 32px;
 }
 
 /* footer */
@@ -642,35 +789,65 @@ background-color: var(--color-32425C);
   outline: 5px solid blue;
   outline-offset: -5px;
 
-  display: grid;
-  grid-template-columns:  auto 1fr;
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+
+  /* display: grid;
+  grid-template-columns:  auto 1fr; */
+}
+.main-footer-logo {
+  width: 220px;
+  height: 68px;
+
+  margin-right: 174px;
+  margin-bottom: 22px;
+  order: 1;
 }
 .site-sections-list-wrapper {
   outline: 5px solid blue;
   outline-offset: -5px;
+  
+  width: 546px;
+  
+  order: 2;
 
-  grid-column: 2/-1;
+  /* grid-column: 2/-1; */
 }
 .site-sections-list {
   padding: 0;
   margin: 0;
+  
+  display: flex;
+  justify-content: space-between;
 }
 .products-sections-list-wrapper {
   outline: 5px solid blue;
   outline-offset: -5px;
 
-  grid-column: 2/-1;
+  /* grid-column: 2/-1; */
+  flex-grow: 1;
+  order: 4;
 }
 .products-sections-list{
   padding: 0;
   margin: 0;
+  
+  order: 4;
+  display: flex;
+  justify-content: space-between;
 }
 .footer-contacts{
   outline: 5px solid blue;
   outline-offset: -5px;
   
-  grid-column: 1/2;
-  grid-row: 2/3;
+  width: 333px;
+  margin-right: 80px;
+
+  order: 3;
+  
+  /* grid-column: 1/2;
+  grid-row: 2/3; */
 }
 .site-sections-list a {
   color: var(--basic-background);
@@ -686,6 +863,8 @@ background-color: var(--color-32425C);
 }
 .footer-contacts-description,
 .footer-contacts-phone {
+  margin: 0;
+  
   color: var(--color-F3F7F9);
 }
 .bottom-footer-bar {
@@ -695,27 +874,47 @@ background-color: var(--color-32425C);
   outline: 5px solid green;
   outline-offset: -5px;
    
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  /* display: grid;
+  grid-template-columns: 1fr 1fr 1fr; */
+  display: flex;
+  justify-content: space-between;
+
 }
 .copyright{
   outline: 5px solid blue;
   outline-offset: -5px;
-  justify-self: start;
+  width: 250px;
 }
 .socials {
   outline: 5px solid blue;
   outline-offset: -5px;
+
+  flex-grow: 1;
+}
+.socials-list {
+  display: flex;
+  justify-content: center;
+
+  margin-top: 35px;
 }
 .feedback {
   outline: 5px solid blue;
   outline-offset: -5px;
+
+  width: 310px;
+
+  display: flex;
 }
 .copyright p,
 .feedback p{
   font-size: 16px;
   line-height: 18px;
   color: var(--basic-white);
+  margin: 0;
+  padding: 0;
+  margin-top: 35px;
+  
+  
 }
 .copyright a,
 .feedback a{
@@ -749,48 +948,82 @@ background-color: var(--color-32425C);
 
 .popup-feedback {
   width: 620px;
-    
+  
   margin: 0 auto;
   padding: 0 10px;
 
-  display: grid;
+  /* display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 20px;
-  grid-template-rows: 1fr;
+  grid-template-rows: 1fr; */
 
   outline: 5px solid blue;
   outline-offset: -5px;
 }
+.popup-feedback-top-bar {
+  width: 620px;
+  height: 7px;
+  background-color:var(--basic-red);
+  margin-bottom: 40px;
+}
+
+.popup-feedback-container {
+  width: 462px;
+  margin: 0 auto;
+  
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  
+}
 .popup-close {
   order: 1;
-  grid-row: 1/-1;
+  /* grid-row: 1/-1;
   grid-column: 1/-1;
-  justify-self: end;
+  justify-self: end; */
 }
 .popup-feedback-description-text {
   outline: 5px solid yellow;
   outline-offset: -5px;
-
-  grid-column: 1/2;
   
+  width: 220px;
   margin-bottom: 12px;
+  /* grid-column: 1/2;
+  
+  margin-bottom: 12px; */
 }
 .popup-feedback-description-email {
   outline: 5px solid yellow;
   outline-offset: -5px;
 
-  grid-column: 2/3;
-  
+  width: 220px;
   margin-bottom: 12px;
+  /* grid-column: 2/3;
+  
+  margin-bottom: 12px; */
 }
+
 .popup-feedback-description {
-  grid-column: 1/-1;
+  /* grid-column: 1/-1; */
 
   outline: 5px solid yellow;
   outline-offset: -5px;
+  
+  width: 100%;
+  margin-bottom: 37px;
 }
+
+.popup-feedback-bottom-bar {
+  width: 620px;
+  height: 112px;
+  background-color:var(--color-F4F4F4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .tipical-red-button.tipical-red-button-popup {
-  grid-column: 1/-1;
+  /* grid-column: 1/-1; */
 }
 .popup-feedback input[type=text]::placeholder,
 .popup-feedback input[type=email]::placeholder,
