--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,9 @@ ul {
   text-transform: uppercase;
   text-align: center;
   color: var(--basic-white);
+
+  height: 38px;
+
   background-color:var(--basic-red);
 }
 .tipical-red-button:hover,
@@ -262,8 +265,7 @@ ul {
   outline-offset: -5px;
 
   width: 270px;
-  margin-right: 69px;
-
+  
   text-align: center;
 }
 .header-phone {
@@ -319,22 +321,29 @@ ul {
 }
 .main-navigation-list {
   margin: 0;
+  padding: 0px;
   
   outline: 5px solid yellowgreen;
   outline-offset: -5px;
 
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content:space-around;
 }
 .main-navigation-item {
-  margin-top: 16px;
-  margin-right: 56px;
-  margin-bottom: 20px;
+  display: inline-block;
 
-}
-.main-navigation-item:nth-child(7) {
-  margin-right: 0;
+  max-width: 170px;
+  min-width: 122px;
+  height: 60px;
+
+  text-align: center;
+
+  flex-grow: 1;
+  flex-shrink: 0;
+} 
+.main-navigation-item:last-child {
+  margin-right: auto;
 }
 .main-navigation a {
   color: var(--basic-white);  
@@ -731,23 +740,41 @@ margin-bottom: 30px;
 .main-footer-logo {
   width: 220px;
   height: 68px;
-
-  margin-bottom: 22px;
 }
 .site-sections-list-wrapper {
   outline: 5px solid blue;
   outline-offset: -5px;
   grid-column: 2/-1;
 }
+/*? Добавил каждому элементу списка свойство flex-grow: 1;, чтобы в случае переполнения
+ контентом  (увеличение символов в названии) элемент меню выглядел нормально.
+ Так же добавил перенос строки во флексе, в случае появления новых элементов
+ в меню. Но при переносе строки из-за свойства justify-content: space-between
+ последующие элементы не красиво выстраиваются. Для того чтобы элементы 
+ прижимались к левой стороне последнему задал маржин авто. Так же  мне пришлось ограничить 
+ максимальную ширину элемента (с запасом на переполнение контентом) только после этого список  
+ стал выглядеть нормально при переносе на следующую строку. Такое решение приемлемо, или я 
+ перемудрил?*/
 .site-sections-list {
   padding: 0;
   margin: 0;
-  margin-top: 37px;
-  margin-bottom: 29px;
+  
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 
+}
+.site-sections-list li {
+  flex-grow: 1;
+  flex-shrink: 0;
+
+  max-width: 120px;
+
+  margin-top: 37px;
+  margin-bottom: 29px;
+}
+.site-sections-list li:last-child{
+  margin-right: auto;
 }
 .products-sections-list-wrapper {
   outline: 5px solid blue;
@@ -759,9 +786,19 @@ margin-bottom: 30px;
   margin: 0;
   margin-bottom: 74px;
   margin-left: 22px;
+
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+}
+.products-sections-list li {
+  flex-grow: 1;
+  flex-shrink: 0;
+
+  max-width: 170px;
+}
+.products-sections-list li:last-child{
+  margin-right: auto;
 }
 .footer-contacts{
   outline: 5px solid blue;
@@ -854,7 +891,13 @@ margin-bottom: 30px;
 
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
+}
+.socials-list li {
+  flex-shrink: 0;
+
+  width: 44px;
+  height: 44px;
 }
 .socials img {
   width: 44px;
@@ -973,7 +1016,6 @@ margin-bottom: 30px;
   margin: 37px auto;
 
   width: 460px;
-  height: 38px;
 }
 
 
@@ -983,16 +1025,54 @@ margin-bottom: 30px;
 .reg-user-section {
   outline: 5px solid yellowgreen;
   outline-offset: -5px;
+
+  width: 300px;
+  
+  margin-left: 45px;
+
+  display: flex;
+  flex-wrap: wrap;
 }
 .reg-user-section-wrapper {
+  width: 300px;
+
   background-color:var(--basic-white);
+
+  display: flex;
+  flex-wrap: wrap;
+}
+.reg-user-section-logo {
+  width: 20px;
+  height: 18px;
+
+  margin-left: 15px;
+  margin-top: 13px;
+  margin-right:21px;
+  margin-bottom: 14px;
 }
 .reg-user-section p {
+  display: inline-block;
+
+  width: 194px;
+  height: 21px;
+
+  margin-right: 20px; 
+
   font-size: 21px;
   line-height: 21px;
   color: var(--basic-black);
 }
+.reg-user-section-log-out {
+  margin-top: 14px;
+  margin-bottom: 14px;
+}
 .reg-user-section-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+
+  width: 300px;
+
   padding: 0;
   margin: 0;
 }
@@ -1001,6 +1081,10 @@ margin-bottom: 30px;
   line-height: 18px;
   color:var(--color-32425C);
 }
+.reg-user-section-list li {
+  display: inline-block;
+}
+
 .reg-user-section-list a:hover,
 .reg-user-section-list a:focus{
   color: var(--basic-red);
@@ -1014,12 +1098,16 @@ margin-bottom: 30px;
   margin-bottom: 20px;
 } 
 .breadcrumbs-list {
-  display: grid;
+  display: flex;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
-  
+    
   outline: 5px solid yellowgreen;
   outline-offset: -5px
+}
+.breadcrumbs-list li {
+  margin-right: 41px;
 }
 .breadcrumbs-list a {
   font-family: "PT Sans", Arial, sans-serif;
@@ -1035,12 +1123,17 @@ margin-bottom: 30px;
   background-color: var(--basic-background);
 }
 .products-list h1 {
+  display: inline-block;
+  
   font-size: 30px;
   line-height: 30px;
   text-transform: uppercase;
+  
   padding: 0;
   margin: 0;
   margin-left: 30px;
+  margin-top: 30px;  
+  
   color: var(--color-32425C);
 }
 /* filters */
@@ -1059,8 +1152,32 @@ margin-bottom: 30px;
   outline: 5px solid blue;
   outline-offset: -5px; 
 }
+.filters-header-background-bar {
+  display: block;
+  height: 38px;
+  margin-bottom: 14px;
+  background-color: var(--color-F7F3EC);
+}
+.filters h2 {
+  /* ?Если я правильно понимаю, для строчных елементнов margin top/bottom 
+  ?не работает, если мне нужно четко выставить отступы сверху/снизу от элемента
+  ?тогда мне нужно сделать его блочно-строчным. Или я не верно поступаю? */
+  display: inline-block;
+
+  font-family:inherit;
+  font-weight: inherit;
+  font-size: 13px;
+  line-height: 18px;
+  text-transform: uppercase;
+
+  margin-left: 18px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 .filters fieldset {
   border: none;
+  margin: 0;
+  padding: 0;
 }
 .filters legend {
   font-weight: 700;
@@ -1068,13 +1185,57 @@ margin-bottom: 30px;
   line-height: 30px;
   text-transform: uppercase;
 }
-.filters ul {
+.legend-price {
+  margin-bottom: 14px;
+}
+.filters-range-background-bar {
+  display: block;
+  padding-top: 39px;
+  padding-bottom: 39px;
+  margin-bottom: 9px;
+  background-color: var(--color-F7F3EC);
+}
+.filters [type="range"] {
+  display: inline-block;
+  margin: auto;
+  /* ?Лиза подскажи пожалуйста, есть ли способ такие элементы варавнивать автоматически 
+  ?по вертикали? Я не чего лучше не придумал, как только задать родителю
+  ?,внутренний отступ. Если поставить для [type="range"] внешние отступы
+  ?то он выпадет из родителя (из серого фона), авто маржины вверх/вних не работают, остаеться только фиксированные 
+  ?значения из макета задавать. Есть ли способ чтобы родителю (в данном случае фоновая обертка), задать фиксированную
+  ?высоту, а дочерний элемент автоматически выровнять? Потому что мне кажеться как я 
+  ?сделал - это "костыль" получаеться!*/
+}
+
+.filters-manufacturers-list,
+.filters-power-supply-list {
   margin: 0;
   padding: 0;
 }
 .filters [type="number"] {
   font-size: 17px;
   line-height: 18px;
+
+  display: inline-block;
+  box-sizing: border-box;
+  width: 95px;
+  height: 38px;
+
+  margin: 0;
+  padding: 0;
+  margin-bottom: 42px;
+
+  background-color: var(--color-F7F3EC);
+}
+.filters-manufacturers-list {
+  margin-bottom: 46px;
+}
+.filters-power-supply-list {
+  margin-bottom: 34px;
+}
+.filters-manufacturers-list li,
+.filters-power-supply-list li{
+  margin-bottom: 10px;
 }
 .filters [type="checkbox"],
 .filters [type="radio"] {
@@ -1089,7 +1250,8 @@ margin-bottom: 30px;
 .sorting {
   margin-bottom: 28px;
   background-color:var(--color-F7F3EC);
-  ;
+  display: flex;
+  flex-wrap: wrap;
 }
 .sorting h2 {
   font-family: "PT Sans", Arial, sans-serif;
@@ -1097,6 +1259,24 @@ margin-bottom: 30px;
   font-size: 13px;
   line-height: 18px;
   text-transform: uppercase;
+
+  margin-right: 140px;
+  margin-left:20px;
+}
+.sorting-list-one {
+  display: flex;
+  flex-wrap: wrap;
+  width: 355px;
+  justify-content: space-between;
+  margin-right: 46px;
+}
+.sorting-list-one li:last-child {
+  margin-right: auto;
+}
+.sorting-list-two {
+  display: flex;
+  justify-content: space-around;
+  flex-grow: 1;
 }
 .sorting ul {
   margin: 0;
@@ -1140,9 +1320,36 @@ margin-bottom: 30px;
   font-weight: 400;
   font-size: 13px;
   line-height: 18px; 
+
   outline: 5px solid blue;
   outline-offset: -5px;
+
   grid-column: 2/3;
+
+  display: flex;
+  justify-content: flex-start;
+}
+.pagination-list {
+  margin: 0;
+  padding: 0;
+
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+.pagination-list-item {
+  display: inline-block;
+
+  text-align: center;
+
+  height: 38px;
+  min-width: 38px;
+
+  flex-grow: 1;
+  flex-shrink: 0;
+
+  margin-right: 10px;
+
 }
 .pagination a{
   color: var(--basic-black);
@@ -1169,11 +1376,23 @@ margin-bottom: 30px;
   text-align: left;
 
   margin-left: 130px;
+  padding-top: 64px;
 }
 .about-perforators h2 {
   font-family: "Cuprum", Arial, sans-serif;
   font-size: 30px;
   line-height: 30px; 
+
+  margin: 0;
+  padding: 0;
+  margin-bottom: 25px;
+}
+.about-perforators p {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 67px;
+
+  width: 907px;
 }
   
 /* popup-added to basket*/
@@ -1181,26 +1400,56 @@ margin-bottom: 30px;
   font-weight: 700;
   font-size: 24px;
   line-height: 30px;
+
   width: 620px;
-  height: 283px;
   margin: 0 auto;
-  outline: 5px solid blue;
-  outline-offset: -5px;
+  
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 7px 1fr 112px;
+
   background-color: var(--basic-white);
 }
-.popup-red-bar {
+.popup-added-to-basket::before {
+  content: "";
+  display: block;
   grid-row: 1/2;
   background-color: var(--basic-red);
 }
-.popup-img-and-text-wrapper {
+.popup-img-text-and-close-button-wrapper {
   margin-left: 81px;
 }
 .popup-buttons-wrapper {
   grid-row: 3/4;
   background-color:var(--color-F1F1F1);
+
+  padding-top: 37px;
+}
+/* Вопрос наставнику:
+?Не могу понять почему у меня кнопка "оформить заказ" сдвинута ниже относительно 
+?кнопки "продолжить покупки", у родительского дива"popup-buttons-wrapper" задан 
+?паддинг топ, у дочерних элементов "оформить заказ" и "продолжить покупки" отступы
+?сверху обнулены. Подскажи пожалуйста, что у меня тут не так? */
+.popup-buttons-wrapper .tipical-red-button {
+  display: inline-block;
+  width: 192px;
+  
+  padding-top: 0;
+  margin-top: 0;
+  margin-left: 114px;
+  margin-right: 10px;
+  margin-bottom: 37px;
+}
+.popup-buttons-wrapper button {
+  display: inline-block;
+  box-sizing: border-box;
+
+  width: 192px;
+  height: 38px;
+
+  margin: 0;
+  padding: 0;
+  margin-bottom: 37px;
 }
 .popup-added-to-basket [type="button"] {
   font-weight: 400;
